--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Sans+KR&display=swap');
+
 html {
     width: 100%;
     height: 100%;
+    font-family: 'Noto Sans', 'Noto Sans KR', sans-serif;
 }
 
 body {
